# lib/db/src/schema/index.ts
@@ -11,3 +11,4 @@ export * from "./countryBaselines";
 export * from "./appMigrationMarkers";
 export * from "./marketPrices";
 export * from "./cards";
+export * from "./maritimeMovement";
